// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/inventory/entries > sin filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "compra": {
          "include": {
            "proveedor": true,
          },
        },
        "material": true,
      },
      "orderBy": [
        {
          "fecha_movimiento": "desc",
        },
        {
          "id_movimiento": "desc",
        },
      ],
      "skip": 0,
      "take": 20,
      "where": {
        "AND": [
          {
            "tipo_movimiento": "entrada",
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.findMany",
  },
  {
    "args": {
      "where": {
        "AND": [
          {
            "tipo_movimiento": "entrada",
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.count",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
      },
    },
    "prisma": "material.findMany",
  },
  {
    "args": {
      "orderBy": {
        "razon_social": "asc",
      },
      "select": {
        "id_proveedor": true,
        "razon_social": true,
      },
    },
    "prisma": "proveedor.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_compra": "desc",
      },
      "select": {
        "id_compra": true,
      },
    },
    "prisma": "compra.findMany",
  },
]
`;

exports[`/dashboard/inventory/entries > sin filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<span aria-current="page">Entradas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Entradas de inventario</h1>
<p>Movimientos de entrada generados por compras u otros registros.</p>
</div>
</div>
</div>
</section>
<form action="/dashboard/inventory/entries">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar entrada..." name="q" value=""/>
</div>
<div>
<label for="material">Material</label>
<select id="material" name="material">
<option value="" selected="">Todos los materiales</option>
<option value="id_material-1">nombre_material-1</option>
<option value="id_material-2">nombre_material-2</option>
</select>
</div>
<div>
<label for="supplier">Proveedor</label>
<select id="supplier" name="supplier">
<option value="" selected="">Todos los proveedores</option>
<option value="id_proveedor-1">razon_social-1</option>
<option value="id_proveedor-2">razon_social-2</option>
</select>
</div>
<div>
<label for="purchase">Compra</label>
<select id="purchase" name="purchase">
<option value="" selected="">Todas las compras</option>
<option value="id_compra-1">id_compra-1</option>
<option value="id_compra-2">id_compra-2</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value=""/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value=""/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/inventory/entries">Limpiar filtros</a>
</div>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Fecha</th>
<th>Material</th>
<th>Compra</th>
<th>Proveedor</th>
<th>Cantidad</th>
<th>Stock resultante</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_movimiento-1</td>
<td>1/7/2026</td>
<td>nombre_material-1</td>
<td>id_compra-1</td>
<td>razon_social-1</td>
<td>11.50</td>
<td>11.50</td>
<td>
<a data-variant="outline" href="/dashboard/inventory/purchases/id_compra-1">Ver compra</a>
</td>
</tr>
<tr>
<td>id_movimiento-2</td>
<td>2/7/2026</td>
<td>nombre_material-2</td>
<td>-</td>
<td>razon_social-2</td>
<td>22.50</td>
<td>22.50</td>
<td>-</td>
</tr>
</tbody>
</table>
</div>
<div>
<p>Mostrando 1-20 de 42 entradas · Página 1 de 3</p>
<div>
<button data-variant="outline" disabled="">Anterior</button>
<a data-variant="outline" href="/dashboard/inventory/entries?page=2">Siguiente</a>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/entries > todos los filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "compra": {
          "include": {
            "proveedor": true,
          },
        },
        "material": true,
      },
      "orderBy": [
        {
          "fecha_movimiento": "desc",
        },
        {
          "id_movimiento": "desc",
        },
      ],
      "skip": 20,
      "take": 20,
      "where": {
        "AND": [
          {
            "tipo_movimiento": "entrada",
          },
          {
            "OR": [
              {
                "id_compra": {
                  "contains": "COM",
                  "mode": "insensitive",
                },
              },
              {
                "material": {
                  "nombre_material": {
                    "contains": "COM",
                    "mode": "insensitive",
                  },
                },
              },
              {
                "compra": {
                  "proveedor": {
                    "razon_social": {
                      "contains": "COM",
                      "mode": "insensitive",
                    },
                  },
                },
              },
            ],
          },
          {
            "id_material": "MAT00000001",
          },
          {
            "compra": {
              "id_proveedor": "PRV00000001",
            },
          },
          {
            "id_compra": "COM00000001",
          },
          {
            "fecha_movimiento": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.findMany",
  },
  {
    "args": {
      "where": {
        "AND": [
          {
            "tipo_movimiento": "entrada",
          },
          {
            "OR": [
              {
                "id_compra": {
                  "contains": "COM",
                  "mode": "insensitive",
                },
              },
              {
                "material": {
                  "nombre_material": {
                    "contains": "COM",
                    "mode": "insensitive",
                  },
                },
              },
              {
                "compra": {
                  "proveedor": {
                    "razon_social": {
                      "contains": "COM",
                      "mode": "insensitive",
                    },
                  },
                },
              },
            ],
          },
          {
            "id_material": "MAT00000001",
          },
          {
            "compra": {
              "id_proveedor": "PRV00000001",
            },
          },
          {
            "id_compra": "COM00000001",
          },
          {
            "fecha_movimiento": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.count",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
      },
    },
    "prisma": "material.findMany",
  },
  {
    "args": {
      "orderBy": {
        "razon_social": "asc",
      },
      "select": {
        "id_proveedor": true,
        "razon_social": true,
      },
    },
    "prisma": "proveedor.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_compra": "desc",
      },
      "select": {
        "id_compra": true,
      },
    },
    "prisma": "compra.findMany",
  },
]
`;

exports[`/dashboard/inventory/entries > todos los filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<span aria-current="page">Entradas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Entradas de inventario</h1>
<p>Movimientos de entrada generados por compras u otros registros.</p>
</div>
</div>
</div>
</section>
<form action="/dashboard/inventory/entries">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar entrada..." name="q" value="COM"/>
</div>
<div>
<label for="material">Material</label>
<select id="material" name="material">
<option value="">Todos los materiales</option>
<option value="id_material-1">nombre_material-1</option>
<option value="id_material-2">nombre_material-2</option>
</select>
</div>
<div>
<label for="supplier">Proveedor</label>
<select id="supplier" name="supplier">
<option value="">Todos los proveedores</option>
<option value="id_proveedor-1">razon_social-1</option>
<option value="id_proveedor-2">razon_social-2</option>
</select>
</div>
<div>
<label for="purchase">Compra</label>
<select id="purchase" name="purchase">
<option value="">Todas las compras</option>
<option value="id_compra-1">id_compra-1</option>
<option value="id_compra-2">id_compra-2</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value="2026-07-01"/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value="2026-07-31"/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/inventory/entries">Limpiar filtros</a>
</div>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Fecha</th>
<th>Material</th>
<th>Compra</th>
<th>Proveedor</th>
<th>Cantidad</th>
<th>Stock resultante</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_movimiento-1</td>
<td>1/7/2026</td>
<td>nombre_material-1</td>
<td>id_compra-1</td>
<td>razon_social-1</td>
<td>11.50</td>
<td>11.50</td>
<td>
<a data-variant="outline" href="/dashboard/inventory/purchases/id_compra-1">Ver compra</a>
</td>
</tr>
<tr>
<td>id_movimiento-2</td>
<td>2/7/2026</td>
<td>nombre_material-2</td>
<td>-</td>
<td>razon_social-2</td>
<td>22.50</td>
<td>22.50</td>
<td>-</td>
</tr>
</tbody>
</table>
</div>
<div>
<p>Mostrando 21-40 de 42 entradas · Página 2 de 3</p>
<div>
<a data-variant="outline" href="/dashboard/inventory/entries?q=COM&amp;material=MAT00000001&amp;supplier=PRV00000001&amp;purchase=COM00000001&amp;from=2026-07-01&amp;to=2026-07-31&amp;page=1">Anterior</a>
<a data-variant="outline" href="/dashboard/inventory/entries?q=COM&amp;material=MAT00000001&amp;supplier=PRV00000001&amp;purchase=COM00000001&amp;from=2026-07-01&amp;to=2026-07-31&amp;page=3">Siguiente</a>
</div>
</div>
</main>",
  "outcome": "render",
}
`;
